// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should have a bounced state 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: #FFF;
  background-color: #004A7C;
  border: none;
  border-radius: 0.125rem;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 600;
}

.c0:hover {
  background-color: #0068af;
  -webkit-transform: scale(0.95);
  -ms-transform: scale(0.95);
  transform: scale(0.95);
}

<Button
  bounced={true}
  disabled={false}
  e2e="defaultButton"
  type="button"
>
  <styled.button
    bounced={true}
    disabled={false}
    e2e="defaultButton"
    type="button"
  >
    <button
      className="c0"
      data-e2e="defaultButton"
      disabled={false}
      type="button"
    />
  </styled.button>
</Button>
`;

exports[`Button should have a disabled state 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: #FFF;
  background-color: #004A7C;
  border: none;
  border-radius: 0.125rem;
  cursor: not-allowed;
  outline: none;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  opacity: 0.5;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 600;
}

.c0:hover {
  background-color: #004A7C;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<Button
  bounced={false}
  disabled={true}
  e2e="defaultButton"
  type="button"
>
  <styled.button
    bounced={false}
    disabled={true}
    e2e="defaultButton"
    type="button"
  >
    <button
      className="c0"
      data-e2e="defaultButton"
      disabled={true}
      type="button"
    />
  </styled.button>
</Button>
`;

exports[`Button should have a type property 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: #FFF;
  background-color: #004A7C;
  border: none;
  border-radius: 0.125rem;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 600;
}

.c0:hover {
  background-color: #0068af;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<Button
  bounced={false}
  disabled={false}
  e2e="defaultButton"
  type="submit"
>
  <styled.button
    bounced={false}
    disabled={false}
    e2e="defaultButton"
    type="submit"
  >
    <button
      className="c0"
      data-e2e="defaultButton"
      disabled={false}
      type="submit"
    />
  </styled.button>
</Button>
`;

exports[`Button should have a type property 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: #FFF;
  background-color: #004A7C;
  border: none;
  border-radius: 0.125rem;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 600;
}

.c0:hover {
  background-color: #0068af;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<Button
  bounced={false}
  disabled={false}
  e2e="defaultButton"
  type="reset"
>
  <styled.button
    bounced={false}
    disabled={false}
    e2e="defaultButton"
    type="reset"
  >
    <button
      className="c0"
      data-e2e="defaultButton"
      disabled={false}
      type="reset"
    />
  </styled.button>
</Button>
`;

exports[`Button should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.5rem;
  line-height: 2.5rem;
  width: 100%;
  padding: 0 1rem;
  box-sizing: border-box;
  color: #FFF;
  background-color: #004A7C;
  border: none;
  border-radius: 0.125rem;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 0.3s ease 0s;
  transition: all 0.3s ease 0s;
  opacity: 1;
  font-family: 'IBM Plex Sans','Helvetica Neue',Arial,sans-serif;
  font-size: 1rem;
  font-weight: 600;
}

.c0:hover {
  background-color: #0068af;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<Button
  bounced={false}
  disabled={false}
  e2e="defaultButton"
  type="button"
>
  <styled.button
    bounced={false}
    disabled={false}
    e2e="defaultButton"
    type="button"
  >
    <button
      className="c0"
      data-e2e="defaultButton"
      disabled={false}
      type="button"
    />
  </styled.button>
</Button>
`;
